--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GPI</title>
 
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/style.css?ver=2">
 </head>
 <body>
 
@@ -404,6 +404,7 @@
 		</div>
 	</div>
 </section>
+
 <footer class="footer">
 	<div class="container">
 		<div class="footer__wrap">
@@ -490,8 +491,6 @@
 	</div>
 </footer>
 
-
-
 </main>
 
 <!-- modal start -->
@@ -551,8 +550,8 @@
 
 <script src="../js/jquery-3.6.0.min.js"></script>
 <script src="../js/owl.carousel.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="../js/main.js?ver=2"></script>
 
-<!-- <script src="/PixelPerfect/pixelScreen.js"></script> -->
+<script src="/PixelPerfect/pixelScreen.js"></script>
 </body>
 </html>
