--- a/app/pages/resources.html
+++ b/app/pages/resources.html
@@ -62,213 +62,55 @@
 		</div>
 	</div>
 </header>
-<section class="sec-header-page sec-header-page_2 padding-top-menu-active" style="background-image: url('../img/bg/pwp.jpg');">
-	<div class="container">
-		<div class="sec-header-page__wrap">
-			<div class="sec-header-page__content">
-				<h2 class="title title_main sec-header-page__title">GPI Personal Wealth Portrait</h2>
-				<p class="text-sec sec-header-page__text">Manage and track your entire financial world from the comfort of your PC, anywhere, anytime.</p>
-				<a href="#" class="sec-header-page__btn btn btnOpen" data-modal="#modal-login">Log into your account</a>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="sec-descrp sec-descrp_white">
-	<div class="container">
-		<div class="sec-descrp__wrap">
-			<div class="sec-descrp__content">
-				<div class="block-descrp block-descrp_black">
-					<div class="block-descrp__el">
-						<div class="descrp-el">
-							<img src="../img/block-descrp/check.svg" alt="" class="descrp-el__icon">
-							<p class="descrp-el__text">Track savings and investments</p>
-						</div>
-					</div>
-					<div class="block-descrp__el">
-						<div class="descrp-el">
-							<img src="../img/block-descrp/check.svg" alt="" class="descrp-el__icon">
-							<p class="descrp-el__text">Safe documents storage</p>
-						</div>
-					</div>
-					<div class="block-descrp__el">
-						<div class="descrp-el">
-							<img src="../img/block-descrp/check.svg" alt="" class="descrp-el__icon">
-							<p class="descrp-el__text">Intuitive navigation</p>
-						</div>
-					</div>
-					<div class="block-descrp__el">
-						<div class="descrp-el">
-							<img src="../img/block-descrp/check.svg" alt="" class="descrp-el__icon">
-							<p class="descrp-el__text">Legacy planning  & wealth preservation </p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="sec-plan">
-	<div class="container">
-		<div class="sec-plan__wrap">
-			<div class="sec-top center">
-			   <h2 class="title title_sec sec-plan__title">Your Personal Wealth Portrait</h2>
-			</div>
-			<div class="sec-plan__content wrap-article text-info-2">
-				<p>Welcome to Personal Wealth Portrait (PWP) — a platform that gives you access to view all your finances in one place 24/7 on any web-device. PWP enables you to collate information on your short-term finances like bank account(s), credit cards, loans and mortgages, view your fund information and investment portfolio at the click of a button. So whether you’re looking for an up-to-date valuation of your investments, want to assess how you’re progressing against your goals or simply wish to get in touch, PWP has it covered.</p>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="sec-form sec-form_2">
-	<div class="container">
-		<div class="sec-form__wrap">
-			<div class="sec-form__content">
-				<div class="block-form-2">
-					<img src="../img/form5.png" alt="" class="block-form-2__img">
-					<div class="block-form-2__body">
-						<h2 class="block-form-2__title title title_sec">Would you like to know more about Personal Wealth Portrait?</h2>
-						<p class="block-form-2__text text-info-2">Talk to your advisor today to help you complete your own PWP. </p>
-						<div class="block-form-2__content">
-							<div class="block-form-2__inputs">
-								<div class="block-form-2__inputs-el">
-									<div class="form-el">
-										<div class="form-el__placeholder">Name</div>
-										<input type="text" class="form-el__inp inp form-inp">
-									</div>
-								</div>
-								<div class="block-form-2__inputs-el">
-									<div class="form-el">
-										<div class="form-el__placeholder">Email</div>
-										<input type="text" class="form-el__inp inp form-inp">
-									</div>
-								</div>
-							</div>
-							<label class="checkbox-el">
-								<span class="checkbox-el__checkbox checkbox-def">
-									<input type="checkbox" class="checkbox-def__inp" required="">
-									<span class="checkbox-def__dec"></span>
-								</span>
-								<span class="checkbox-el__text">I Agree to the <a href="#" class="link">Privacy Policy</a></span>
-							</label>
-							<button class="block-form-2__btn btn">Speak to an adviser</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="sec-pwp">
-	<div class="container">
-		<div class="sec-pwp__wrap">
-			<div class="sec-pwp__content">
-				<div class="block-pwp">
-					<div class="block-pwp__el">
-						<div class="pwp-el">
-							<img src="../img/block-pwp/1.jpg" alt="" class="pwp-el__img">
-							<div class="pwp-el__dec"></div>
-							<h3 class="pwp-el__title">secure client portal with remote access</h3>
-						</div>
-					</div>
-					<div class="block-pwp__el">
-						<div class="pwp-el">
-							<img src="../img/block-pwp/2.jpg" alt="" class="pwp-el__img">
-							<div class="pwp-el__dec"></div>
-							<h3 class="pwp-el__title">all net assets in a single picture</h3>
-						</div>
-					</div>
-					<div class="block-pwp__el">
-						<div class="pwp-el">
-							<img src="../img/block-pwp/3.jpg" alt="" class="pwp-el__img">
-							<div class="pwp-el__dec"></div>
-							<h3 class="pwp-el__title">online data delivering</h3>
-						</div>
-					</div>
-					<div class="block-pwp__el">
-						<div class="pwp-el">
-							<img src="../img/block-pwp/4.jpg" alt="" class="pwp-el__img">
-							<div class="pwp-el__dec"></div>
-							<h3 class="pwp-el__title">automated presentations</h3>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="sec-pwp__bottom">
-				<p class="sec-pwp__bottom-text text-info-3">Discover how we create a true picture of your current financial position, this enables you to answer the question «Is this where I want to be».</p>
-				<a href="#" class="sec-pwp__bottom-btn btn">Discover how PWP works</a>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="sec-facts">
-	<div class="container">
-		<div class="sec-facts__wrap">
-			<div class="sec-facts__content">
-				<div class="block-facts">
-					<div class="block-facts__el">
-						<div class="facts-el">
-							<img src="../img/block-facts/7.svg" alt="" class="facts-el__icon">
-							<p class="facts-el__text text-info-3"><span>Real  time reporting </span><br>  updated daily all over the globe</p>
-						</div>
-					</div>
-					<div class="block-facts__el">
-						<div class="facts-el">
-							<img src="../img/block-facts/8.svg" alt="" class="facts-el__icon">
-							<p class="facts-el__text text-info-3"><span>Focused performance</span><br>  where do you want to be</p>
-						</div>
-					</div>
-					<div class="block-facts__el">
-						<div class="facts-el">
-							<img src="../img/block-facts/9.svg" alt="" class="facts-el__icon">
-							<p class="facts-el__text text-info-3"><span>Interactive platform</span><br>
-							 benchmarking, charts & analysis</p>
-						</div>
-					</div>
 
-					<div class="block-facts__el">
-						<div class="facts-el">
-							<img src="../img/block-facts/10.svg" alt="" class="facts-el__icon">
-							<p class="facts-el__text text-info-3"><span>Cyber security</span><br>
-							 privacy & confidentiality</p>
-						</div>
-					</div>
-					<div class="block-facts__el">
-						<div class="facts-el">
-							<img src="../img/block-facts/11.svg" alt="" class="facts-el__icon">
-							<p class="facts-el__text text-info-3"><span>Information available</span><br>
-							24/7 365</p>
-						</div>
-					</div>
-					<div class="block-facts__el">
-						<div class="facts-el">
-							<img src="../img/block-facts/12.svg" alt="" class="facts-el__icon">
-							<p class="facts-el__text text-info-3"><span>Multi-language & diverse currencies</span><br>
-							applicable to everyone</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="sec-plan">
+<div class="block-links-top padding-top-menu-active">
 	<div class="container">
-		<div class="sec-plan__wrap">
-			<div class="sec-top center">
-			   <h2 class="title title_sec sec-plan__title">Why you will really appreciate your Personal Wealth Portrait</h2>
-			</div>
-			<div class="sec-plan__content wrap-article text-info-2">
-				<ul>
-					<li>Store and access all of your financial information in one, convenient, online location</li>
-					<li>Utilise a broad range of real-time data feeds including property, all your investments, insurance policies, cars and bank accounts – anywhere, anytime</li>
-					<li>All of your assets and liabilities are conveniently together, so you can see everything you need at once</li>
-					<li>Consolidated reporting shows you the big picture, including list of holdings, volatility and performance charts for each portfolio of assets</li>
-					<li>The GPI PWP puts you in control by physically seeing your true picture</li>
+		<div class="block-links-top__wrap">
+			<div class="block-links-top__content">
+				<ul class="links-menu links-menu_2">
+					<li class="links-menu__el"><a href="#" class="links-menu__link active">Investment vocabulary</a></li>
+					<li class="links-menu__el"><a href="#" class="links-menu__link">Market review</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-</section>
+</div>
+<div class="block-articles-top">
+	<div class="container">
+		<div class="block-articles-top__wrap">
+			<div class="block-articles-top__content">
+				<div class="block-articles-top__left">
+					<article class="article-el article-el_big">
+						<a href="#"><img src="../img/articles/big.jpg" alt="" class="article-el__img article-el_big__img"></a>
+						<a href="#" class="article-el__body article-el_big__body">
+							<h3 class="article-el__title article-el_big__title">Why alternative funds are getting more popular?</h3>
+							<p class="article-el__text text-info-3 article-el_big__text">Alternative funds are getting more and more popular for private and institutional investors. They are now viewed as an asset class in their own right – mainly because of their often low correlation ...</p>
+							<span class="article-el__date">30 April</span>
+						</a>
+					</article>
+				</div>
+				<div class="block-articles-top__right">
+					<article class="article-el">
+						<a href="#"><img src="../img/articles/small.jpg" alt="" class="article-el__img"></a>
+						<a href="#" class="article-el__body">
+							<h3 class="article-el__title">Structured products and their role in investmen</h3>
+							<p class="article-el__text text-info-2">Structured products have an important role in investment ...</p>
+							<span class="article-el__date">20 April</span>
+						</a>
+					</article>
+					<article class="article-el">
+						<a href="#"><img src="../img/articles/small.jpg" alt="" class="article-el__img"></a>
+						<a href="#" class="article-el__body">
+							<h3 class="article-el__title">Structured products and their role in investmen</h3>
+							<p class="article-el__text text-info-2">Structured products have an important role in investment ...</p>
+							<span class="article-el__date">20 April</span>
+						</a>
+					</article>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <section class="sec-form sec-form_2">
 	<div class="container">
 		<div class="sec-form__wrap">
@@ -302,6 +144,86 @@
 		</div>
 	</div>
 </section>
+<div class="sec-blog">
+	<div class="container">
+		<div class="sec-blog__wrap">
+			<div class="sec-blog__content">
+				<div class="block-blog">
+					<div class="block-blog__el">
+						<article class="article-el blog-el">
+							<a href="#"><img src="../img/articles/small.jpg" alt="" class="article-el__img blog-el__img"></a>
+							<a href="#" class="article-el__body">
+								<h3 class="article-el__title blog-el__title">Bonds</h3>
+								<p class="article-el__text text-info-2">A bond is a debt security quoted on a recognised stock market and issued by an organisation seeking to raise ...</p>
+								<span class="article-el__date">20 April</span>
+							</a>
+						</article>
+					</div>
+					<div class="block-blog__el">
+						<article class="article-el blog-el">
+							<a href="#"><img src="../img/articles/big.jpg" alt="" class="article-el__img blog-el__img"></a>
+							<a href="#" class="article-el__body">
+								<h3 class="article-el__title blog-el__title">Bonds</h3>
+								<p class="article-el__text text-info-2">A bond is a debt security quoted on a recognised stock market and issued by an organisation seeking to raise ...</p>
+								<span class="article-el__date">20 April</span>
+							</a>
+						</article>
+					</div>
+					<div class="block-blog__el">
+						<article class="article-el blog-el">
+							<a href="#"><img src="../img/articles/small.jpg" alt="" class="article-el__img blog-el__img"></a>
+							<a href="#" class="article-el__body">
+								<h3 class="article-el__title blog-el__title">Bonds</h3>
+								<p class="article-el__text text-info-2">A bond is a debt security quoted on a recognised stock market and issued by an organisation seeking to raise ...</p>
+								<span class="article-el__date">20 April</span>
+							</a>
+						</article>
+					</div>
+					<div class="block-blog__el">
+						<article class="article-el blog-el">
+							<a href="#"><img src="../img/articles/big.jpg" alt="" class="article-el__img blog-el__img"></a>
+							<a href="#" class="article-el__body">
+								<h3 class="article-el__title blog-el__title">Bonds</h3>
+								<p class="article-el__text text-info-2">A bond is a debt security quoted on a recognised stock market and issued by an organisation seeking to raise ...</p>
+								<span class="article-el__date">20 April</span>
+							</a>
+						</article>
+					</div>
+					<div class="block-blog__el">
+						<article class="article-el blog-el">
+							<a href="#"><img src="../img/articles/big.jpg" alt="" class="article-el__img blog-el__img"></a>
+							<a href="#" class="article-el__body">
+								<h3 class="article-el__title blog-el__title">Bonds</h3>
+								<p class="article-el__text text-info-2">A bond is a debt security quoted on a recognised stock market and issued by an organisation seeking to raise ...</p>
+								<span class="article-el__date">20 April</span>
+							</a>
+						</article>
+					</div>
+					<div class="block-blog__el">
+						<article class="article-el blog-el">
+							<a href="#"><img src="../img/articles/small.jpg" alt="" class="article-el__img blog-el__img"></a>
+							<a href="#" class="article-el__body">
+								<h3 class="article-el__title blog-el__title">Bonds</h3>
+								<p class="article-el__text text-info-2">A bond is a debt security quoted on a recognised stock market and issued by an organisation seeking to raise ...</p>
+								<span class="article-el__date">20 April</span>
+							</a>
+						</article>
+					</div>
+					<div class="block-blog__el">
+						<article class="article-el blog-el">
+							<a href="#"><img src="../img/articles/big.jpg" alt="" class="article-el__img blog-el__img"></a>
+							<a href="#" class="article-el__body">
+								<h3 class="article-el__title blog-el__title">Bonds</h3>
+								<p class="article-el__text text-info-2">A bond is a debt security quoted on a recognised stock market and issued by an organisation seeking to raise ...</p>
+								<span class="article-el__date">20 April</span>
+							</a>
+						</article>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 <footer class="footer">
 	<div class="container">
