--- a/app/pages/services.html
+++ b/app/pages/services.html
@@ -460,7 +460,8 @@
 					<div class="footer__col-block">
 						<div class="footer__col-title">Asset Management</div>
 						<ul class="footer__col-links footer__col-links_main">
-							<li><a href="#">Portfolio example</a></li>
+							<li><a href="#">The facts and figures</a></li>
+							<li><a href="#">Five key of investment activities</a></li>
 						</ul>
 					</div>
 					<div class="footer__col-block">
@@ -630,6 +631,6 @@
 <script src="../js/owl.carousel.min.js"></script>
 <script src="../js/main.js?ver=3"></script>
 
-<script src="/PixelPerfect/pixelScreen.js"></script>
+<!-- <script src="/PixelPerfect/pixelScreen.js"></script> -->
 </body>
 </html>
