--- a/app/pages/resources.html
+++ b/app/pages/resources.html
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 </div>
-<section class="sec-form sec-form_2">
+<section class="sec-form sec-form_2 sec-form_bg">
 	<div class="container">
 		<div class="sec-form__wrap">
 			<div class="sec-form__content">
@@ -203,7 +203,7 @@
 						<article class="article-el blog-el">
 							<a href="#"><img src="../img/articles/small.jpg" alt="" class="article-el__img blog-el__img"></a>
 							<a href="#" class="article-el__body">
-								<h3 class="article-el__title blog-el__title">Bonds</h3>
+								<h3 class="article-el__title blog-el__title">Why alternative funds are getting more popular for private and institutional investors?</h3>
 								<p class="article-el__text text-info-2">A bond is a debt security quoted on a recognised stock market and issued by an organisation seeking to raise ...</p>
 								<span class="article-el__date">20 April</span>
 							</a>
@@ -247,7 +247,8 @@
 					<div class="footer__col-block">
 						<div class="footer__col-title">Asset Management</div>
 						<ul class="footer__col-links footer__col-links_main">
-							<li><a href="#">Portfolio example</a></li>
+							<li><a href="#">The facts and figures</a></li>
+							<li><a href="#">Five key of investment activities</a></li>
 						</ul>
 					</div>
 					<div class="footer__col-block">
@@ -417,6 +418,6 @@
 <script src="../js/owl.carousel.min.js"></script>
 <script src="../js/main.js?ver=3"></script>
 
-<script src="/PixelPerfect/pixelScreen.js"></script>
+<!-- <script src="/PixelPerfect/pixelScreen.js"></script> -->
 </body>
 </html>
