--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -598,6 +598,6 @@
 <script src="../js/owl.carousel.min.js"></script>
 <script src="../js/main.js?ver=3"></script>
 
-<!-- <script src="/PixelPerfect/pixelScreen.js"></script> -->
+<script src="/PixelPerfect/pixelScreen.js"></script>
 </body>
 </html>
