--- a/app/pages/resources.html
+++ b/app/pages/resources.html
@@ -418,6 +418,6 @@
 <script src="../js/owl.carousel.min.js"></script>
 <script src="../js/main.js?ver=3"></script>
 
-<!-- <script src="/PixelPerfect/pixelScreen.js"></script> -->
+<script src="/PixelPerfect/pixelScreen.js"></script>
 </body>
 </html>
