--- a/app/pages/whoweare.html
+++ b/app/pages/whoweare.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GPI</title>
 
-	<link rel="stylesheet" href="../css/style.css?ver=3">
+	<link rel="stylesheet" href="../css/style.css?ver=5">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
 				<nav class="top-menu__nav nav-menu">
 					<ul class="nav-menu__link links-menu">
 						<li class="links-menu__el links-menu__dropdownWrap">
-							<a href="#" class="links-menu__link">Services</a>
+							<div class="links-menu__link links-menu__link_title">Services</div>
 							<div class="links-menu__dropdown dropdown-menu-el">
 								<div class="dropdown-menu-el__body">
 									<ul class="dropdown-menu-el__links">
@@ -304,7 +304,7 @@
 			<div class="footer__content">
 				<div class="footer__col">
 					<div class="footer__col-block">
-						<div class="footer__col-title">Services</div>
+						<a href="#" class="footer__col-title">Services</a>
 						<ul class="footer__col-links footer__col-links_main">
 							<li><a href="#">Financial planing</a></li>
 							<li><a href="#">Retirement planing</a></li>
@@ -318,14 +318,14 @@
 				</div>
 				<div class="footer__col">
 					<div class="footer__col-block">
-						<div class="footer__col-title">Asset Management</div>
+						<a href="#" class="footer__col-title">Asset Management</a>
 						<ul class="footer__col-links footer__col-links_main">
 							<li><a href="#">The facts and figures</a></li>
 							<li><a href="#">Five key of investment activities</a></li>
 						</ul>
 					</div>
 					<div class="footer__col-block">
-						<div class="footer__col-title">PWP Portal</div>
+						<a href="#" class="footer__col-title">PWP Portal</a>
 						<ul class="footer__col-links footer__col-links_main">
 							<li><a href="#">Client login</a></li>
 						</ul>
@@ -333,14 +333,14 @@
 				</div>
 				<div class="footer__col">
 					<div class="footer__col-block">
-						<div class="footer__col-title">Resources</div>
+						<a href="#" class="footer__col-title">Resources</a>
 						<ul class="footer__col-links footer__col-links_main">
 							<li><a href="#">Inevstment vocabulary</a></li>
 							<li><a href="#">Market research</a></li>
 						</ul>
 					</div>
 					<div class="footer__col-block">
-						<div class="footer__col-title">About company</div>
+						<a href="#" class="footer__col-title">About company</a>
 						<ul class="footer__col-links footer__col-links_main">
 							<li><a href="#">Who we are</a></li>
 							<li><a href="#">Contact us</a></li>
@@ -355,7 +355,7 @@
 						</ul>
 					</div>
 					<div class="footer__col-block">
-						<div class="footer__col-title">Office business hours</div>
+						<a href="#" class="footer__col-title">Office business hours</a>
 						<ul class="footer__col-links">
 							<li>Monday to Friday <span class="text-bold">9:00-18:00</span></li>
 							<li>Saturday <span class="text-bold">10:00-14:00</span></li>
@@ -489,8 +489,6 @@
 
 <script src="../js/jquery-3.6.0.min.js"></script>
 <script src="../js/owl.carousel.min.js"></script>
-<script src="../js/main.js?ver=3"></script>
-
-<script src="/PixelPerfect/pixelScreen.js"></script>
+<script src="../js/main.js?ver=5"></script>
 </body>
 </html>
