--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -43,8 +43,30 @@
 						</li>
 						<li class="links-menu__el"><a href="#" class="links-menu__link">Asset management</a></li>
 						<li class="links-menu__el"><a href="#" class="links-menu__link">PWP portal</a></li>
-						<li class="links-menu__el"><a href="#" class="links-menu__link">Resources</a></li>
-						<li class="links-menu__el"><a href="#" class="links-menu__link">About GPI</a></li>
+						<li class="links-menu__el links-menu__dropdownWrap">
+							<div class="links-menu__link links-menu__link_title">Resources</div>
+							<div class="links-menu__dropdown dropdown-menu-el">
+								<div class="dropdown-menu-el__body">
+									<ul class="dropdown-menu-el__links">
+										<li class="dropdown-menu-el__links-el"><a href="#">Financial planing</a></li>
+										<li class="dropdown-menu-el__links-el"><a href="#">Retirement planing </a></li>
+										<li class="dropdown-menu-el__links-el"><a href="#">Capital investments </a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
+						<li class="links-menu__el links-menu__dropdownWrap">
+							<div class="links-menu__link links-menu__link_title">About GPI</div>
+							<div class="links-menu__dropdown dropdown-menu-el">
+								<div class="dropdown-menu-el__body">
+									<ul class="dropdown-menu-el__links">
+										<li class="dropdown-menu-el__links-el"><a href="#">Financial planing</a></li>
+										<li class="dropdown-menu-el__links-el"><a href="#">Retirement planing </a></li>
+										<li class="dropdown-menu-el__links-el"><a href="#">Capital investments </a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
 					</ul>
 					<div class="nav-menu__mob">
 						<a href="tel:+421233527827" class="nav-menu__tel tel">+421 (2) 335 278 27</a>
@@ -56,6 +78,10 @@
 						</div>
 					</div>
 				</nav>
+				<div class="top-menu__right">
+					<a href="tel:+421233527827" class="top-menu__right-link">+421 (2) 335 278 27</a>
+					<a href="#" class="top-menu__right-btn btn btnOpen" data-modal="#modal-call">Speak to an adviser</a>
+				</div>
 				<div class="top-menu__btn">Menu</div>
 				<svg class="top-menu__close" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1 1L17 17" stroke="#18325E" stroke-width="1.6"/><path d="M17 1L1 17" stroke="#18325E" stroke-width="1.6"/></svg>
 			</div>
@@ -343,7 +369,7 @@
 						<div class="articles-el">
 							<img src="../img/block-articles/1.jpg" alt="" class="articles-el__img">
 							<div class="articles-el__body">
-								<h2 class="articles-el__title title title_sec">Every investment plants a tree</h2>
+								<h2 class="articles-el__title title title_sec">Every investment plants <span>a tree</span></h2>
 								<img src="../img/tree.jpg" alt="" class="articles-el__body-img">
 								<p class="articles-el__text text-info-2">We care deeply about the planet and in partnership with One Tree Planted, we work to restore the earth by replanting trees in deforested areas. On behalf of every new GPI’s client minimum 10 trees will be planted around the world to restore nature and biodiversity.</p>
 								<a href="#" class="articles-el__link">More about our green initiative</a>
@@ -405,6 +431,14 @@
 	</div>
 </section>
 
+<div class="message-info">
+	<svg class="message-info__close" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.292893 12.2929C-0.0976311 12.6834 -0.0976311 13.3166 0.292893 13.7071C0.683417 14.0976 1.31658 14.0976 1.70711 13.7071L0.292893 12.2929ZM13.7071 1.70711C14.0976 1.31658 14.0976 0.683417 13.7071 0.292893C13.3166 -0.0976311 12.6834 -0.0976311 12.2929 0.292893L13.7071 1.70711ZM1.70711 13.7071L5.9424 9.47181L4.52819 8.0576L0.292893 12.2929L1.70711 13.7071ZM5.9424 9.47181L13.7071 1.70711L12.2929 0.292893L4.52819 8.0576L5.9424 9.47181Z" fill="#18325E"/><path d="M13.7071 12.2929C14.0976 12.6834 14.0976 13.3166 13.7071 13.7071C13.3166 14.0976 12.6834 14.0976 12.2929 13.7071L13.7071 12.2929ZM0.292892 1.70711C-0.0976315 1.31658 -0.0976315 0.683417 0.292892 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L0.292892 1.70711ZM12.2929 13.7071L8.0576 9.47181L9.47181 8.0576L13.7071 12.2929L12.2929 13.7071ZM8.0576 9.47181L0.292892 1.70711L1.70711 0.292893L9.47181 8.0576L8.0576 9.47181Z" fill="#18325E"/></svg>
+	<div class="message-info__body">
+		<div class="message-info__title">COVID-19 update</div>
+		<p class="message-info__text text-info-small">We are operating via safe online and telephone consultations, providing you with the same excellent service as meeting in our office. Just coffee and tea will not be served to you.</p>
+	</div>
+</div>
+
 <footer class="footer">
 	<div class="container">
 		<div class="footer__wrap">
@@ -413,8 +447,7 @@
 					<div class="footer__col-block">
 						<a href="#" class="footer__col-title">Services</a>
 						<ul class="footer__col-links footer__col-links_main">
-							<li><a href="#">Financial planing</a></li>
-							<li><a href="#">Retirement planing</a></li>
+							<li><a href="#">Financial planing</a></li>							<li><a href="#">Retirement planing</a></li>
 							<li><a href="#">Capital investments</a></li>
 							<li><a href="#">Wealth management</a></li>
 							<li><a href="#">Educational planing</a></li>
@@ -462,7 +495,7 @@
 						</ul>
 					</div>
 					<div class="footer__col-block">
-						<a href="#" class="footer__col-title">Office business hours</a>
+						<div class="footer__col-title">Office business hours</div>
 						<ul class="footer__col-links">
 							<li>Monday to Friday <span class="text-bold">9:00-18:00</span></li>
 							<li>Saturday <span class="text-bold">10:00-14:00</span></li>
@@ -584,18 +617,13 @@
 	</div>
 </div>
 
-<div class="message-info">
-	<svg class="message-info__close" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.292893 12.2929C-0.0976311 12.6834 -0.0976311 13.3166 0.292893 13.7071C0.683417 14.0976 1.31658 14.0976 1.70711 13.7071L0.292893 12.2929ZM13.7071 1.70711C14.0976 1.31658 14.0976 0.683417 13.7071 0.292893C13.3166 -0.0976311 12.6834 -0.0976311 12.2929 0.292893L13.7071 1.70711ZM1.70711 13.7071L5.9424 9.47181L4.52819 8.0576L0.292893 12.2929L1.70711 13.7071ZM5.9424 9.47181L13.7071 1.70711L12.2929 0.292893L4.52819 8.0576L5.9424 9.47181Z" fill="#18325E"/><path d="M13.7071 12.2929C14.0976 12.6834 14.0976 13.3166 13.7071 13.7071C13.3166 14.0976 12.6834 14.0976 12.2929 13.7071L13.7071 12.2929ZM0.292892 1.70711C-0.0976315 1.31658 -0.0976315 0.683417 0.292892 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L0.292892 1.70711ZM12.2929 13.7071L8.0576 9.47181L9.47181 8.0576L13.7071 12.2929L12.2929 13.7071ZM8.0576 9.47181L0.292892 1.70711L1.70711 0.292893L9.47181 8.0576L8.0576 9.47181Z" fill="#18325E"/></svg>
-	<div class="message-info__body">
-		<div class="message-info__title">COVID-19 update</div>
-		<p class="message-info__text text-info-small">We are operating via safe online and telephone consultations, providing you with the same excellent service as meeting in our office. Just coffee and tea will not be served to you.</p>
-	</div>
-</div>
 
 <!-- modal end -->
 
 <script src="../js/jquery-3.6.0.min.js"></script>
 <script src="../js/owl.carousel.min.js"></script>
 <script src="../js/main.js?ver=5"></script>
+
+<!-- <script src="../PixelPerfect/pixelScreen.js"></script> -->
 </body>
 </html>
