--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GPI</title>
 
-	<link rel="stylesheet" href="../css/style.css?ver=5">
+	<link rel="stylesheet" href="../css/style.css?ver=6">
 </head>
 <body>
 
@@ -92,6 +92,13 @@
 	<div class="container">
 		<div class="sec-header__wrap">
 			<div class="sec-header__content">
+				<ul class="links-menu links-menu_2 sec-header__links">
+					<li class="links-menu__el"><a href="#" class="links-menu__link">Services</a></li>
+					<li class="links-menu__el"><a href="#" class="links-menu__link">Asset management</a></li>
+					<li class="links-menu__el"><a href="#" class="links-menu__link">PWP portal</a></li>
+					<li class="links-menu__el"><a href="#" class="links-menu__link">Resources</a></li>
+					<li class="links-menu__el"><a href="#" class="links-menu__link">About GPI</a></li>
+				</ul>
 				<h1 class="title title_main sec-header__title">Online financial advice for individuals</h1>
 				<p class="text-sec">GPI Europe offers astute advice across a range of investment and portfolio services & devise intelligent solutions for your lifetime journey.</p>
 				<a href="#" class="btn sec-header__btn btnOpen" data-modal="#modal-call">Book a free consultation</a>
@@ -622,7 +629,7 @@
 
 <script src="../js/jquery-3.6.0.min.js"></script>
 <script src="../js/owl.carousel.min.js"></script>
-<script src="../js/main.js?ver=5"></script>
+<script src="../js/main.js?ver=6"></script>
 
 <!-- <script src="../PixelPerfect/pixelScreen.js"></script> -->
 </body>
