--- a/app/pages/management.html
+++ b/app/pages/management.html
@@ -93,7 +93,7 @@
 		<div class="sec-header-page__wrap">
 			<div class="sec-header-page__content">
 				<h2 class="title title_main sec-header-page__title">How we manage money</h2>
-				<p class="text-sec sec-header-page__text">For more than 10 years we have collaborated with Mithril. They are an independent global asset management company with worldwide presence and long history.</p>
+				<p class="text-sec sec-header-page__text">For morethan 10 years we have collaborated with Mithril. They are an independent global asset management companywith worldwide presence and long history.</p>
 				<a href="#" class="sec-header-page__btn btn">Speak to an adviser</a>
 			</div>
 		</div>
@@ -142,7 +142,7 @@
 			<div class="sec-plan__content wrap-article text-info-2">
 				<p>Mithril Asset Management is the engine behind GPI Europe’s multi asset portfolio management.</p>
 				<p></p>
-				<p>They have great strength in depth with a team that includes investment professionals with expertise in capital market research, investment strategy design, liability management, derivatives and portfolio management. They are the team behind our backs and are responsible for the the management and performance of our client’s portfolios. </p>
+				<p>They have great strength in depth with a team that includes investment professionals with expertise in capital market research, investment strategy design, liability management, derivatives and portfolio management. They are the team behind our backs and are responsible for the the management and performance of our client’s portfolios.</p>
 				<p></p>
 				<p>It is Mithril who is responsible for the strategic allocation of all underlying assets in portfolios, in addition to full fund manager oversight and selection. They are also responsible for ensuring the risk characteristics of each portfolio meet given objectives over time.</p>
 				<p></p>
@@ -163,7 +163,7 @@
 					<div class="block-facts__el">
 						<div class="facts-el">
 							<img src="../img/block-facts/1.svg" alt="" class="facts-el__icon">
-							<p class="facts-el__text text-info-3"><span>€ 210 000 000</span>  under management</p>
+							<p class="facts-el__text text-info-3"><span>€ 210000000</span>  under management</p>
 						</div>
 					</div>
 					<div class="block-facts__el">
@@ -210,7 +210,7 @@
 			</div>
 			<div class="sec-plan__content wrap-article text-info-2">
 				<p>Mithril’s approach in designing a portfolio is based on one simple facet — to meet the client’s financial objectives & aims. They understand the uniqueness of every client and design a portfolio which is centred around the principal that no two client scenarios are the same and therefore no two portfolios are the same! Working independently allows them to choose most asset classes from practically the entire investment universe including stocks, bonds, structured notes, ETFs, hedge funds and commodities.</p>
-				<p>Bringing active management allows Mithril to ensure that whatever is your appetite or aversion to risk they construct a diverse portfolio focused purely on your goals.</p>
+				<p>Bringing active management allows Mithril to ensure that whatever is your appetite or aversion to risk they construct adiverse portfolio focused purely on your goals.</p>
 				<p></p>
 				<p>We strongly believe that client outcomes will always be best served by:</p>
 				<ul>
@@ -222,7 +222,7 @@
 				<p></p>
 				<p>Mithril’s financial strength and competence provides investors with the ability to accessing a wide range of asset classes and more accurately assess an investment’s future value over the long term.</p>
 				<p></p>
-				<p>They take an impartial approach, offering high levels of personal service to build and preserve the wealth of clients and their families through a robust yet innovative investment process. The core of what Mithril does is seeking out the very best investment opportunities all around the world and put them to use for everyday investors to create the best risk-adjusted returns.</p>
+				<p>They take an impartial approach, offering high levels of personal serviceto build and preserve the wealth of clients and their families through a robust yet innovative investment process. The core of what Mithril does is seeking out the very best investment opportunities all around the world and put them to use for everyday investors to create the best risk-adjusted returns.</p>
 			</div>
 		</div>
 	</div>
@@ -270,7 +270,7 @@
 	<div class="container">
 		<div class="sec-info__wrap">
 			<div class="sec-top center sec-info__top">
-				<h2 class="title title_sec">An investment process shaped by five key activities</h2>
+				<h2 class="title title_sec">An investment process shaped by five keyactivities</h2>
 			</div>
 			<div class="sec-info__content">
 				<div class="block-info">
@@ -297,7 +297,7 @@
 							<div class="info-el__count">3</div>
 							<div class="info-el__body">
 								<h3 class="info-el__title title title_small2">Portfolio Management</h3>
-								<p class="info-el__text text-info-2">We believe - daily monitoring is essential in ensuring a portfolio is managed and adjusted efficiently in line with target exposures, while simultaneously minimising cost and risk. We believe it is at the centre of all investment activity. So, the Portfolio Management Team allocates investments in line with strategic asset allocation strategy and carrying out daily portfolio monitoring plus ensure all ongoing portfolio changes are efficiently implemented.</p>
+								<p class="info-el__text text-info-2">We believe - daily monitoringis essential in ensuring a portfolio is managed and adjusted efficiently in line with target exposures, while simultaneously minimising cost and risk.We believe it is at the centre of all investment activity. So, the Portfolio Management Team allocates investmentsin line with strategic asset allocation strategy and carrying out dailyportfolio monitoring plus ensure all ongoing portfolio changes are efficiently implemented.</p>
 							</div>
 						</div>
 					</div>
@@ -306,7 +306,7 @@
 							<div class="info-el__count">4</div>
 							<div class="info-el__body">
 								<h3 class="info-el__title title title_small2">Manager Oversight</h3>
-								<p class="info-el__text text-info-2">We embed experts at every stage of the investment process. Our oversight team complements the skills of our asset managers, providing them with direction and insight into chosen underlying assets. This includes a robust selection oversight process, a key source of market views from underlying managers, an ability to seed/ implement new investment strategies that can enhance returns.</p>
+								<p class="info-el__text text-info-2">We embed experts at every stage of the investment process. Our oversight team complements the skills of our asset managers, providing them with direction and insight into chosen underlying assets. This includes a robust selection oversight process, akey source of market views from underlying managers, an ability to seed/ implement new investment strategies that can enhance returns.</p>
 							</div>
 						</div>
 					</div>
