--- a/app/pages/services.html
+++ b/app/pages/services.html
@@ -428,7 +428,7 @@
 	<div class="container">
 		<div class="sec-form__wrap">
 			<div class="sec-form__content">
-				<div class="block-form-2">
+				<div class="block-form-2 block-form-2_fix">
 					<img src="../img/form.png" alt="" class="block-form-2__img">
 					<div class="block-form-2__body">
 						<h2 class="block-form-2__title title title_sec">First steps in investing</h2>
